corrections on mobile view

--- a/style.css
+++ b/style.css
@@ -1380,7 +1380,7 @@ footer {
     .brand p {
         padding: 0px;
         letter-spacing: 1px;
-        font
+        font-size: 16px;
     }
 
     .learnmors {
